--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,22 @@ details {
   background-color: rgb(242, 233, 252);
   line-height: 30px;
   margin-left: 10px;
-
+  position: relative;
   box-shadow: 2px 2px 5px black;
 }
 details[open] {
   background-color: rgb(242, 233, 252);
+}
+
+p::before {
+  content: "";
+  background-color: orange;
+  position: absolute;
+  width: 4px;
+  left: 5px;
+  top: 3px;
+  bottom: 3px;
+  
 }
 summary {
   outline-style: none;
@@ -24,7 +35,6 @@ summary::-webkit-details-marker {
 
 p {
   margin-left: 10px;
-  border-left: rgb(255, 196, 0) solid 3px;
   padding-left: 5px;
 }
 details summary .question {
