--- a/css/style.css
+++ b/css/style.css
@@ -13,17 +13,18 @@ details[open] {
   background-color: rgb(242, 233, 252);
 }
 
-p::before {
+details::before {
   content: "";
   background-color: orange;
   position: absolute;
   width: 4px;
   left: 5px;
-  top: 3px;
-  bottom: 3px;
+  top: 5px;
+  bottom: 5px;
   
 }
 summary {
+  
   outline-style: none;
   box-shadow: none;
   border-color: transparent;
@@ -34,8 +35,8 @@ summary::-webkit-details-marker {
 }
 
 p {
-  margin-left: 10px;
-  padding-left: 5px;
+  margin-left:20px;
+  padding: 10px;
 }
 details summary .question {
   margin-bottom: 0%;
